tests/k8s/tests/deployments/bad-cnp/kafka-l7-policy-v1.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "Policy to test l3-dependent-l7"
metadata:
  name: "l3-dependent-l7"
spec:
  endpointSelector:
    matchLabels:
      id: server
  ingress:
  - fromEndpoints:
    - matchLabels:
        id: client
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        kafka:
        - apiKey: metadata
        - topic: allowedTopic
