tests/k8s/tests/deployments/bad-cnp/no-endpoint-selector-ciliumv1.yaml
---
apiVersion: "cilium.io/v1"
kind: CiliumNetworkPolicy
metadata:
  name: "no-endpoint-selector"
spec:
  endpointSelector:
